# libgd

./: CMakeLists.txt  Readme  dist.info
examples/: CMakeLists.txt
share/libgd/example/: arc  copyrotated  crop  flip  gif  nnquant  tgaread  tiffread
src/: CMakeLists.txt
tests/: CMakeLists.txt
